# flint

./: .editorconfig  .gitignore  .markdownlint.json  AGENTS-V1.md  AGENTS-V2.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FLINT-V2.md  MIGRATION.md  README-V1.md  README.md  RELEASING.md  _typos.toml  biome.json  default.json  flint.toml  mise.toml  release-plz.toml
.github/: renovate-tracked-deps.json  renovate.json5  zizmor.yml
.github/config/: .yamllint.yml  flint.toml  lychee.toml  release-please-config.json  super-linter.env
.github/workflows/: bench-win-extract.yml  generate-super-linter-versions.yml  lint.yml  mise-registry.yml  pr-title.yml  release-assets.yml  release-please.yml  release-plz.yml  release.yml  test.yml
.mise/tasks/: validate-mise-registry
docs/: alternatives.md  check-model.md  cli.md  linters.md  mise-registry-compatibility.md  why.md
docs/adr/: 0001-curated-registry.md  0002-check-ownership-and-fixer-conflicts.md  0003-check-execution-and-setup-outcomes.md  0004-canonical-configuration-and-migrations.md  0005-changed-file-relevance-and-baselines.md  README.md
docs/linters/: regex-replace.md  renovate-deps.md
scripts/: validate-mise-registry.sh
src/: cli_docs_tests.rs  config.rs  files.rs  hook.rs  init.rs  links.rs  main.rs  project_root.rs  readme_snippets.rs  regions.rs  registry.rs  renovate_deps.rs  runner.rs  setup.rs
src/init/: config_files.rs  detection.rs  generation.rs  hooks.rs  migrations.rs  mise_tools.rs  mod.rs  renovate.rs  scaffold.rs  tests.rs  ui.rs  v1.rs
src/linters/: biome.rs  env.rs  flint_setup.rs  google_java_format.rs  kube_linter.rs  license_header.rs  lychee.rs  mod.rs  regex_replace.rs  renovate_deps.rs  rumdl.rs  rustfmt.rs  taplo.rs  typos.rs  yamllint.rs
src/registry/: checks.rs  mise.rs  mod.rs  obsolete.rs  resolve.rs  tests.rs  (+1 more)
super-linter-versions/: v8.4.0.toml  v8.5.0.toml
tests/: e2e.rs  run-linters.bats  test-links.md
(+380 files in other folders)
