[package]
name = "flint"
version = "0.20.0-alpha.1"
edition = "2024"
description = "mise-native lint orchestrator"
license = "Apache-2.0"
repository = "https://github.com/grafana/flint"

[dependencies]
anyhow = "1"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
semver = "1"
regex = "1"
serde_json = "1"
similar = "2"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
