[package]
name = "flint"
version = "0.20.2"
edition = "2024"
description = "mise-native lint orchestrator"
license = "Apache-2.0"
repository = "https://github.com/grafana/flint"

[dependencies]
anyhow = "1"
crossterm = "0.29"
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
tokio = { version = "1", features = ["full"] }
semver = "1"
regex = "1"
globset = "0.4"
serde_json = "1"
similar = "3"
toml_edit = "0.25"
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3"
regex = "1"
